<resources>
    <string name="app_name">ePCS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="announcements">Announcements</string>
    <string name="general_info">General Info</string>
    <string name="menu">Menu</string>
    <string name="staff_directory">Staff Directory</string>
    <string name="clubs_amp_sports"><![CDATA[Clubs & Sports]]></string>
    <string name="current_layout">&#64;layout/content_home</string>
    <string name="home_screen">Home Screen</string>
    <string name="template_text">template text</string>
    <string name="title_activity_info">InfoActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_directory">DirectoryActivity</string>
    <string name="title_activity_club_sport">ClubSportActivity</string>
    <string name="title_activity_announcements">AnnouncementsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>
