<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_announcements"
            android:icon="@drawable/bell"
            android:title="@string/announcements" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/info_circle"
            android:title="@string/general_info" />
        <item
            android:id="@+id/nav_clubsport"
            android:icon="@drawable/football"
            android:title="@string/clubs_amp_sports" />
        <item
            android:id="@+id/nav_teachers"
            android:icon="@drawable/address_book"
            android:title="@string/staff_directory" />
    </group>

    <!--<item android:title="@string/menu">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/menu" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="@string/menu" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
